--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <h6 class="card-title">Portfolio Website</h6>
               <p class="card-text text-secondary">HTML,CSS,JavaScript & Bootstrap</p>
               <button class="btn btn-warning"><A
-                href="https://www.dineout.co.in/kolkata/carpe-diem-park-street-central-kolkata-38912/menu"
+                href="https://myportfoliowebsite24.netlify.app"
                 target="_blank" rel="noopener">View Demo</A></button>
 
 
