--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <h6 class="card-title">Weather APP</h6>
               <p class="card-text text-secondary">HTML,CSS, JAVA SCRIPT,Bootstrap & Rapid API</p>
               <button class="btn btn-warning"><A
-                href="https://www.dineout.co.in/kolkata/carpe-diem-park-street-central-kolkata-38912/menu"
+                href="https://myweatherapp24.netlify.app"
                 target="_blank" rel="noopener">View Demo</A></button>
             </div>
           </div>
