--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <img src="images/2.PNG" class="img-fluid" alt="portfolio-img">
             <div class="card-body text-center">
               <h6 class="card-title">Dictionary App</h6>
-              <p class="card-text text-secondary">HTML,CSS, JAVA SCRIPT,Bootstrap & Rapid API</p>
+              <p class="card-text text-secondary">HTML,CSS, JAVA SCRIPT,Bootstrap & API</p>
               <button class="btn btn-warning"><A
                 href="https://dictionaryapp24.netlify.app"
                 target="_blank" rel="noopener">View Demo</A></button>
